Bug 455433 - Icon applet crashes when opening its properties in Plasmoid Viewer
Summary: Icon applet crashes when opening its properties in Plasmoid Viewer
Status: RESOLVED FIXED
Alias: None
Product: frameworks-kio
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR crash
Target Milestone: ---
Assignee: KIO Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-06-16 18:36 UTC by ratijas
Modified: 2022-08-19 20:50 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-06-16 18:36:00 UTC
SUMMARY

❯ plasmoidviewer -a org.kde.plasma.icon
QML debugging is enabled. Only use this in a safe environment.
qml: View QML loaded
kf.plasma.quick: Applet preload policy set to 1
Toolbox not loading, toolbox package is either invalid or disabled.
qml: New Containment: ContainmentInterface(0x55fb1f1963d0)
file:///home/ratijas/kde/usr/share/plasma/plasmoids/org.kde.plasma.icon/contents/ui/main.qml:42: ReferenceError: mainText is not defined
kf.kio.core: Invalid URL: QUrl("")
ASSERT: "!protocol.isEmpty()" in file /home/ratijas/kde/src/frameworks/kio/src/core/kprotocolinfofactory.cpp, line 61
[1]    6161 IOT instruction (core dumped)  plasmoidviewer -a org.kde.plasma.icon

STEPS TO REPRODUCE
1. Run plasmoidviewer -a org.kde.plasma.icon
2. Press & hold on the applet, choose «Properties» on the vertical panel. Or select configuration button on an always-visible bottom panel.

OBSERVED RESULT
Applet goes Boom!

EXPECTED RESULT
Applet shouldn't crash its containment.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.96.0
Qt Version: 5.15.4
Kernel Version: 5.18.3-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 ratijas 2022-08-19 15:20:02 UTC
Moving to kio, as I believe it should be more fail-tolerant to dummy input.
Comment 2 Bug Janitor Service 2022-08-19 17:33:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/2035
Comment 3 Kai Uwe Broulik 2022-08-19 20:50:43 UTC
Git commit 2b8dc98749915765acab901e43cee78ec156dad8 by Kai Uwe Broulik.
Committed on 19/08/2022 at 17:31.
Pushed by broulik into branch 'master'.

Icon Applet: Disable plasmoid if it is defunct

Otherwise clicking it would show an "invalid URL" error and
trying to open the properties dialog would trigger an assert.

This can normally not happen but you can get here with e.g. plasmoidviewer

M  +10   -1    applets/icon/iconapplet.cpp
M  +3    -0    applets/icon/iconapplet.h
M  +9    -2    applets/icon/package/contents/ui/main.qml

https://invent.kde.org/plasma/plasma-workspace/commit/2b8dc98749915765acab901e43cee78ec156dad8