Icon Applet: Disable plasmoid if it is defunct

Otherwise clicking it would show an "invalid URL" error and
trying to open the properties dialog would trigger an assert.

This can normally not happen but you can get here with e.g. plasmoidviewer

BUG: 455433